tests/NormalTests/paczka1/fuzzy1/44545173.err
Error in line 6: A270 S273 39,5
Error in line 14: zQ38IB0O A945 70,9
Error in line 27: 6KX95NF A270 u48,4
Error in line 25: 6KX95NF A270 76,9
Error in line 16: zQ38IB0O S273 10,2
